[package]
name = "kk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
enclose = "1.2.1"
fltk = { version = "^1.5", features = ["enable-glwindow"] }
fltk-theme = "0.7.9"
libmpv2 = { git = "https://github.com/ckaznable/libmpv2-rs.git" }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
