[workspace]
resolver = "3"
members = [
    "packages/dirs",
    "packages/kk",
    "packages/kr",
]

[workspace.dependencies]
anyhow = "1"
enclose = "1.2.1"
serde = "1.0"
dirs = { path = "./packages/dirs" }
log = "0.4"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
